--- a/email.html
+++ b/email.html
@@ -164,7 +164,7 @@
 						<tbody>
 							<tr>
 								<td>
-									<table class="row-content stack" align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; background-image: url('https://447f1c1189.imgdist.com/public/users/Integrators/BeeProAgency/1129401_1114943/PrivyID.jpg'); background-repeat: no-repeat; background-size: cover; border-radius: 0; color: #000000; width: 680px; margin: 0 auto;" width="680">
+									<table class="row-content stack" align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; background-image: url('https://raw.githubusercontent.com/tompilooo/EncryptFile/9505aec6ab1b27db73410d1d2fdc55e7df7ae925/PrivyID.jpg'); background-repeat: no-repeat; background-size: cover; border-radius: 0; color: #000000; width: 680px; margin: 0 auto;" width="680">
 										<tbody>
 											<tr>
 												<td class="column column-1" width="100%" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; font-weight: 400; text-align: left; padding-bottom: 5px; padding-left: 20px; padding-right: 20px; padding-top: 5px; vertical-align: top; border-top: 0px; border-right: 0px; border-bottom: 0px; border-left: 0px;">
