Update link in download

--- a/email.html
+++ b/email.html
@@ -211,7 +211,7 @@
 														<tr>
 															<td class="pad" style="width:100%;">
 																<div class="alignment" align="center" style="line-height:10px">
-																	<div style="max-width: 185px;"><a href="https://shorturl.at/zBH04" target="_blank" style="outline:none" tabindex="-1"><img src="https://447f1c1189.imgdist.com/public/users/Integrators/BeeProAgency/1129401_1114943/image001.png" style="display: block; height: auto; border: 0; width: 100%;" width="185" alt="Download Privy App" title="Download Privy App"></a></div>
+																	<div style="max-width: 185px;"><a href="https://github.com/tompilooo/EncryptFile/releases/download/App/PrivyDesktopInstaller.zip" target="_blank" style="outline:none" tabindex="-1"><img src="https://447f1c1189.imgdist.com/public/users/Integrators/BeeProAgency/1129401_1114943/image001.png" style="display: block; height: auto; border: 0; width: 100%;" width="185" alt="Download Privy App" title="Download Privy App"></a></div>
 																</div>
 															</td>
 														</tr>
